# cmake-future

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  ExportDir.cmake  LICENSE  Makefile  Pipfile  README.md  add_test_from_target.cmake  conanfile.py  future-config.cmake.in  install.ps  install.sh  install_project.cmake  package-config.cmake.in  package-config.cmake.in.in  pyproject.toml
cmake/: add_package.cmake  package-config.cmake.in
examples/greetings/: CMakeLists.txt  README.md  tasks.py
examples/greetings/include/greetings/: greetings.h
examples/greetings/tests/: CMakeLists.txt
src/: CMakeLists.txt  ExportDir.cmake  FUTURE_INSTALL_PACKAGEDIR.md  FutureExportDir.cmake  FutureInstallDirs.cmake  FutureInstallDirs.md  add_test_executable.cmake  future_add_headers.cmake  future_add_library.cmake  future_add_test_executable.cmake  future_export_sets.cmake  future_get_names_with_file_suffix.cmake  future_get_targets.cmake  future_install_project.cmake  future_project.cmake  get_names_with_file_suffix.cmake  install_project.cmake  package-config.cmake.in.in
tests/: CMakeLists.txt  test_examples.py  test_greetings.py  test_projects.py
tests/data/greetings/: CMakeLists.txt  tasks.py
tests/data/greetings/src/: CMakeLists.txt
tests/greetings/: .gitignore  Makefile  tasks.py
tests/greetings/include/greetings/: greetings.h
tests/greetings/src/: greetings.cpp
tests/greetings/tests/: greetings.cpp
tests/projects/kitchen_sink/: CMakeLists.txt  assert.cmake
tests/projects/no_license/: CMakeLists.txt
