[tool.poetry]
name = "cmake-future"
version = "0.0.0"
authors = ["John Freeman <jfreeman08@gmail.com>"]
classifiers = [
  "Private :: Do Not Upload",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
invoke = "^1.2"
pytest = "^4.6"
pytest-sugar = "^0.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
